--- a/client/style.css
+++ b/client/style.css
@@ -9,7 +9,7 @@
   align-items: center;
   margin-top: 10vh;
   font-size: 25px;
-  width: 300px;
+  width: 350px;
   position: relative;
   margin-left: auto;
   margin-right: auto;
@@ -18,7 +18,7 @@
 .image-upload-input {
   padding: 10px 30px 10px 10px;
   outline: none;
-  width: 100%;
+  max-width: 90%;
   font-size: 17px !important;
   position: absolute;
 }
@@ -29,9 +29,20 @@
 
 .image-upload-icon {
   position: absolute;
-  right: -15px;
+  right: 50px;
   color: rgb(123, 203, 252);
   font-weight: 100;
+  cursor: pointer;
+}
+
+.image-cloud-upload-icon {
+  position: absolute;
+  right: 0;
+  border: 1px solid rgb(123, 203, 252);
+  border-radius: 5px;
+  color: rgb(123, 203, 252);
+  background-color: aliceblue;
+  padding: 5px;
   cursor: pointer;
 }
 
@@ -43,7 +54,6 @@
 }
 
 .preview-image img {
-  border: 1px solid black;
   height: 300px;
   width: 300px;
 }
